adjusted hero aspect ratio and width

--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -30,7 +30,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1450,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -105,7 +105,7 @@
         box-sizing: border-box;
         padding: 0.5rem;
         contain: layout paint style;
-        aspect-ratio: 1904 / 514;
+        aspect-ratio: 1904 / 502;
       }
       
 
@@ -302,8 +302,8 @@
         },
         "image": {
           "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1450,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
-          "width": 1450,
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749150451/texas-remodelers-hero-desktop_auvn6l.avif",
+          "width": 1458,
           "height": 948,
           "caption": "Intro page for Texas Remodelers WordPress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout"
         },
@@ -448,7 +448,7 @@
         <div class="website-grade fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1364/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
