--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -445,32 +445,32 @@
           <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1302,h_844/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1042,h_680/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_568/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_670/v1749150990/texas-remodelers-design-thumbnail_uu46nx.avif"
             alt="Texas Remodelers commercial site, showcasing a modern bathroom design"
-            width="164"
-            height="176"
-            style="object-fit: cover;"
+            width="312"
+            height="335"
+            style="object-fit: cover; aspect-ratio: 312 / 335"
             fetchpriority="high"
             loading="eager"
             decoding="async"
