--- a/pages/collections.html
+++ b/pages/collections.html
@@ -570,7 +570,7 @@
         </div>
         <div class="collection-thumbnail-box">
           <div class="collections-title fancy-border-title">
-            <h2><a href="/pages/project5.html">project 5</a></h2>
+            <h2><a href="/pages/project5/project5-the-design.html">project 5</a></h2>
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
