update image dimensions

--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -434,32 +434,32 @@ d<!DOCTYPE html>
             <picture> 
               <!-- Desktop ≥ 941px -->
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1749258757/parent-tech-thumbnail_dpd40p.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1316,h_986/v1749258757/parent-tech-thumbnail_dpd40p.avif"
                 media="(min-width: 941px)"
                 type="image/avif"
               />
 
               <!-- Tablet 769px–940px -->
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1749258757/parent-tech-thumbnail_dpd40p.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_868,h_652/v1749258757/parent-tech-thumbnail_dpd40p.avif"
                 media="(min-width: 769px) and (max-width: 940px)"
                 type="image/avif"
               />
 
               <!-- Mobile 481px–768px -->
               <source
-                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1749258757/parent-tech-thumbnail_dpd40p.avif"
+                srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_772,h_580/v1749258757/parent-tech-thumbnail_dpd40p.avif"
                 media="(min-width: 481px) and (max-width: 768px)"
                 type="image/avif"
               />
 
               <!-- Fallback ≤480px -->
               <img
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_528,h_566/v1749258757/parent-tech-thumbnail_dpd40p.avif"
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_528,h_296/v1749258757/parent-tech-thumbnail_dpd40p.avif"
                 alt="The final look at the client's Parent Tech Support article and video blog"
                 width="264"
-                height="283"
-                style="object-fit: contain; aspect-ratio: 264 / 283;"
+                height="198"
+                style="object-fit: contain; "
                 fetchpriority="high"
                 loading="eager"
                 decoding="async"
