missing viewport meta

--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -1,10 +1,11 @@
-d<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Parent Tech Support Redesign | WordPress & Elementor Client Project | Genny Allison</title>
     <meta name="description" content="Explore Genny Allison’s UI/UX-focused redesign of the Parent Tech Support website using WordPress and Elementor. Featuring improved layouts, newsletter integration, and mobile optimization for video and article blogs." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Parent Tech Support Website Redesign | WordPress & Elementor | Genny Allison" />
