updated min-height for title

--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -207,7 +207,7 @@
         }
 
         .canvas-skills-title {
-          min-height: 180px;
+          min-height: 150px;
           padding: 0.5rem;
           border-width: 0.5em;
         }
@@ -230,7 +230,6 @@
         .canvas-skills-grid img {
           border-width: 0.5em;
           object-fit: cover;
-          aspect-ratio: 164 / 100;
           object-position: center top;
 
         }
@@ -239,7 +238,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          min-height: 100px;
+          min-height: 80px;
           border-width: 0.5em;
           width: 50%;
           max-width: 50vw;
@@ -386,32 +385,32 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749258015/parent-tech-hero-desktop_yxscgx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_916/v1749258015/parent-tech-hero-desktop_yxscgx.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1749258015/parent-tech-hero-tablet_slvhhw.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_438/v1749258015/parent-tech-hero-tablet_slvhhw.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1749258015/parent-tech-hero-tablet_slvhhw.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_320/v1749258015/parent-tech-hero-tablet_slvhhw.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
           
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1749257694/parent-tech-thumbnail_oijshb.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_204/v1749257694/parent-tech-thumbnail_oijshb.avif"
             alt="Parents Tech Support project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="164"
-            height="100"
-            style="object-fit: cover;"
+            height="102"
+            style="object-fit: cover; aspect-ratio: 164 / 102;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
