changed main id and added min-height

--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -423,7 +423,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me" id="projects">
+    <main class="about-me" id="parent-tech">
       <div class="past-meets-design">
         <div class="resume-date fancy-border project-title" id="description">
           <h2>project 5 | the summary</h2>
