added project6, made final finishing touches

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -70,11 +70,7 @@
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
-
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
-
-    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
     <script type="application/ld+json">
@@ -314,7 +310,7 @@
         }
 
         .canvas-skills-grid img {
-          border-width: 0.5em;
+          border-width: 0.2em;
           object-fit: cover;
           aspect-ratio: 164 / 100;
           object-position: center top;
@@ -359,12 +355,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_120/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               loading="eager"
+              width="136"
+              height="60"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio: 168 / 69.078"
+              style="object-fit: contain;"
             />
           </a>
         </div>
@@ -447,7 +445,7 @@
     <main class="collections-grid">
       <div class="collections-row">
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border-title">
+          <div class="collections-title fancy-border">
             <h2><a href="/pages/project1/project1-intro.html">project 1</a></h2>
           </div>
           <div class="collections-container">
@@ -477,7 +475,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border-title">
+          <div class="collections-title fancy-border">
           <h2><a href="/pages/project2/project2-intro.html">project 2</a></h2>
           </div>
           <div class="collections-container">
@@ -506,7 +504,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border-title">
+          <div class="collections-title fancy-border">
             <h2><a href="/pages/project3/project3-intro.html">project 3</a></h2>
           </div>
           <div class="collections-container">
@@ -538,7 +536,7 @@
       </div>
       <div class="collections-row">
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border-title">
+          <div class="collections-title fancy-border">
             <h2><a href="/pages/project4/project4-intro.html">project 4</a></h2>
           </div>
           <div class="collections-container">
@@ -569,7 +567,7 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border-title">
+          <div class="collections-title fancy-border">
             <h2><a href="/pages/project5/project5-the-design.html">project 5</a></h2>
           </div>
           <div class="collections-container">
@@ -595,8 +593,8 @@
           </div>
         </div>
         <div class="collection-thumbnail-box">
-          <div class="collections-title fancy-border-title">
-            <h2><a href="/pages/project6.html">project 6</a></h2>
+          <div class="collections-title fancy-border">
+            <h2><a href="/pages/project6/project6-the-design.html">project 6</a></h2>
           </div>
             <div class="collections-container">
               <div class="collections-thumbnail fancy-border-img">
