--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -364,12 +364,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_120/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               loading="eager"
+              width="136"
+              height="60"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio: 168 / 69.078"
+              style="object-fit: contain;"
             />
           </a>
         </div>
@@ -672,7 +674,6 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
-        <li><a href="/pages/project1/project1-intro.html#the-menu">the "menu"</a></li>
         <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
         <li><a href="/pages/project1/project1-the-grade.html">the grade</a></li>
         <li><a href="/pages/project1/project1-the-design.html">the design</a></li>
