--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -345,12 +345,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_120/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               loading="eager"
+              width="136"
+              height="60"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio: 168 / 69.078"
+              style="object-fit: contain;"
             />
           </a>
         </div>
