--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -15,7 +15,6 @@
     <meta property="og:image:alt" content="Hero image of Parent Tech Support redesign project showing responsive layout and WordPress integration" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
     
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
     <!-- Desktop ≥ 941px -->
@@ -334,12 +333,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_120/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               loading="eager"
+              width="136"
+              height="60"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio: 168 / 69.078"
+              style="object-fit: contain;"
             />
           </a>
         </div>
