--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
         <div class="desktop-version">
           <div class="main-title">
             <h1>i am genny allison</h1>
-            <p class="tagline">AI Content & SEO Specialist · Web Optimizer · Digital Creator</p>
           </div>
           <div class="animation-container">
             <div class="design-container">      
               <div class="designer-box">
                 <a href="/pages/skills.html">
                   <h2>designer</h2>
-                  <h3 class="element-to-hide768">web design specializing in AI Content & UI/UX design</h3>
+                  <h3 class="element-to-hide768">web design specializing in ai content, seo, & ui/ux design</h3>
                 </a>  
               </div> 
               <div class="headshot-container">
