--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
       type="image/icon type"
     />
 
-    <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="/styles/styles-index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
-    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
+    <noscript><link rel="stylesheet" href="/styles/styles-index.css"></noscript>
+
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
   </head>
