--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
 
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
+    <style>
+      section h1:not([class]),
+      article h1:not([class]),
+      nav h1:not([class]),
+      aside h1:not([class]) {
+        font-size: 2rem;
+      }
+
+      body,
+      h1,
+      h2 {
+        font-synthesis: none;
+        font-kerning: none
+      }
+
+      section h1,
+      h1 {
+        line-height: 1.5;
+        font-size: 2rem;
+      }
+    </style>
   </head>
   <body>
     <header>
