added cloudinary urls, schema markup, og and twitter tags

--- a/index.html
+++ b/index.html
@@ -5,12 +5,53 @@
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the portfolio of Genny Allison, a front-end developer focused on crafting responsive, user-centered web experiences. Specializing in UI/UX design and functional coding, Genny brings seamless design and development together for an engaging digital presence.">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Genny Allison | Front-End Developer, AI Content & SEO Specialist" />
+    <meta property="og:description" content="Explore the digital portfolio of Genny Allison, a front-end developer crafting responsive, SEO-optimized websites with AI-driven content and modern UI/UX design." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1741120266/headshot-nobackground_oet0ut.png" />
+    <meta property="og:image:alt" content="Genny Allison — AI Content Creator & Front-End Developer Headshot" />
+    <meta property="og:site_name" content="Genny Allison Portfolio" />
 
-    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Genny Allison | Front-End Developer, AI Content & SEO Specialist" />
+    <meta name="twitter:description" content="Genny builds lightning-fast, SEO-optimized websites using HTML, CSS, and AI tools. Check out her latest UI/UX and performance-driven projects." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1741120266/headshot-nobackground_oet0ut.png" />
+    <meta name="twitter:image:alt" content="Professional Headshot of Genny Allison for Portfolio Preview" />
+    <meta name="twitter:site" content="@allis78978" />
+    <meta name="twitter:creator" content="@allis78978" />
 
-    <link rel="preload" href="/styles/styles-index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <!-- Desktop ≥ 941px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png"
+      type="image/png"
+      media="(min-width: 941px)"
+      fetchpriority="high"
+    />
 
-    <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <!-- Tablet 769px–940px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png"
+      type="image/png"
+      media="(min-width: 769px) and (max-width: 940px)"
+      fetchpriority="high"
+    />
+
+    <!-- Mobile ≤ 768px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png"
+      type="image/png"
+      media="(max-width: 768px)"
+      fetchpriority="high"
+    />
 
     <link
       class="tab-logo"
@@ -49,6 +90,60 @@
         font-size: 2rem;
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Genny Allison",
+        "alternateName": "Genny A",
+        "url": "https://gennyallison.netlify.app/",
+        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png",
+        "jobTitle": "Front-End Developer, AI Content Creator, SEO Specialist",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app"
+        },
+        "sameAs": [
+          "https://x.com/allis78978",
+          "https://www.instagram.com/allison_stock_inc/",
+          "https://www.linkedin.com/in/genny-allison/",
+          "https://github.com/Allison2002"
+        ],
+        "description": "Genny Allison is a front-end web developer and AI content specialist creating responsive, SEO-optimized websites. Her portfolio showcases modern UI/UX design and performance-optimized code using HTML, CSS, JavaScript, and AI tools.",
+        "alumniOf": [
+          {
+            "@type": "EducationalOrganization",
+            "name": "Codecademy"
+          },
+          {
+            "@type": "EducationalOrganization",
+            "name": "freeCodeCamp"
+          },
+          {
+            "@type": "EducationalOrganization",
+            "name": "Devslopes Academy"
+          }
+        ],
+        "knowsAbout": [
+          "HTML",
+          "CSS",
+          "JavaScript",
+          "WordPress",
+          "UI/UX",
+          "SEO",
+          "Web Performance",
+          "AI Content Creation",
+          "Google PageSpeed Optimization",
+          "Schema Markup",
+          "Responsive Design"
+        ],
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://gennyallison.netlify.app/"
+        }
+      }
+    </script>
   </head>
   <body>
     <header>
@@ -116,8 +211,40 @@
                 </a>  
               </div> 
               <div class="headshot-container">
-                <img class="headshot" src="/img/headshot-nobackground.png" alt="Headshot">
-                <img class="headshot-animated" src="/img/headshot-animation.png" alt="Animated Headshot">
+                <img 
+                  class="headshot" 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png"
+                  srcset="
+                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png 149w,
+                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png 245w,
+                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png 586w
+                  "
+                  sizes="(max-width: 480px) 149px, (max-width: 768px) 245px, 58 6px"
+                  width="586"
+                  height="586"
+                  loading="eager"
+                  decoding="async"
+                  alt="Professional headshot of Genny Allison, AI content creator, SEO specialist, and front-end web developer"
+
+                />
+                <img 
+                  class="headshot-animated" 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-animation_euidhs.png"
+                  srcset="
+                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-animation_euidhs.png 149w,
+                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-animation_euidhs.png 245w,
+                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-animation_euidhs.png 586w
+                  "
+                  sizes="(max-width: 480px) 149px, (max-width: 768px) 245px, 586px"
+                  width="586"
+                  height="586"
+                  loading="eager"
+                  decoding="async"
+                  alt="Animated portrait of Genny Allison showcasing creative AI-driven web development and SEO expertise"
+
+                />
+
+
               </div>    
               <div class="coder-container">
                 <div class="coder-box">
@@ -127,7 +254,13 @@
                   </a>
                 </div>           
                 <div class="code-img">
-                  <img src="/img/code-nobackground.png" alt="" load="lazy">
+                  <img 
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1536,h_1096/v1741120262/code-nobackground_dlcxru.png" 
+                    alt="" 
+                    width="768"
+                    height="548"
+                    loading="lazy"
+                    decoding="async"  
                 </div>  
               </div> 
             </div>  
