--- a/index.html
+++ b/index.html
@@ -23,34 +23,28 @@
     <meta name="twitter:site" content="@allis78978" />
     <meta name="twitter:creator" content="@allis78978" />
 
-        <!-- Desktop ≥ 941px -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png"
-      type="image/png"
+    <!-- Headshot Preloads -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png" 
       media="(min-width: 941px)"
+      type="image/png"
       fetchpriority="high"
     />
-
-    <!-- Tablet 769px–940px -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png"
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png" 
+      media="(min-width: 481px) and (max-width: 940px)" 
       type="image/png"
-      media="(min-width: 769px) and (max-width: 940px)"
-      fetchpriority="high"
     />
-
-    <!-- Mobile ≤ 768px -->
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png"
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png" 
+      media="(max-width: 480px)" 
       type="image/png"
-      media="(max-width: 768px)"
-      fetchpriority="high"
     />
 
     <link
@@ -205,62 +199,69 @@
           <div class="animation-container">
             <div class="design-container">      
               <div class="designer-box">
-                <a href="/pages/skills.html">
+                <a href="/pages/resume.html">
                   <h2>designer</h2>
                   <h3 class="element-to-hide768">web design specializing in ai content, seo, & ui/ux design</h3>
                 </a>  
               </div> 
               <div class="headshot-container">
-                <img 
-                  class="headshot" 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png"
-                  srcset="
-                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png 149w,
-                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png 245w,
-                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png 586w
-                  "
-                  sizes="(max-width: 480px) 149px, (max-width: 768px) 245px, 58 6px"
-                  width="586"
-                  height="586"
-                  loading="eager"
-                  decoding="async"
-                  alt="Professional headshot of Genny Allison, AI content creator, SEO specialist, and front-end web developer"
-
-                />
-                <img 
-                  class="headshot-animated" 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-animation_euidhs.png"
-                  srcset="
-                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-animation_euidhs.png 149w,
-                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-animation_euidhs.png 245w,
-                    https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-animation_euidhs.png 586w
-                  "
-                  sizes="(max-width: 480px) 149px, (max-width: 768px) 245px, 586px"
-                  width="586"
-                  height="586"
-                  loading="eager"
-                  decoding="async"
-                  alt="Animated portrait of Genny Allison showcasing creative AI-driven web development and SEO expertise"
-
-                />
-
-
+                <picture class="headshot">
+                  <source 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png" 
+                    media="(max-width: 480px)" 
+                    type="image/png"
+                  />
+                  <source 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png" 
+                    media="(max-width: 940px)" 
+                    type="image/png"
+                  />
+                  <img 
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png"
+                    alt="Professional headshot of Genny Allison, AI Content Creator and SEO Specialist"
+                    width="586" 
+                    height="586"
+                    loading="eager"
+                    decoding="async"
+                  />
+                </picture>
+                <picture class="headshot-animated">
+                  <source 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_298,h_298/v1741120266/headshot-animation_euidhs.png" 
+                    media="(max-width: 480px)" 
+                    type="image/png"
+                  />
+                  <source 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_245,h_245/v1741120266/headshot-animation_euidhs.png" 
+                    media="(max-width: 940px)" 
+                    type="image/png"
+                  />
+                  <img 
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_586,h_586/v1741120266/headshot-animation_euidhs.png"
+                    alt="Animated portrait of Genny Allison showcasing creative AI-driven web development and SEO expertise"
+                    width="586" 
+                    height="586"
+                    loading="eager"
+                    decoding="async"
+                  />
+                </picture>
               </div>    
               <div class="coder-container">
                 <div class="coder-box">
-                  <a href="/pages/portfolio.html">
+                  <a href="/pages/collections.html">
                     <h2> &lt; coder &gt; </h2>
                     <h3 class="element-to-hide768">crafting functional, seo optimized, responsive code for seamless user experiences</h3>   
                   </a>
                 </div>           
                 <div class="code-img">
                   <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1536,h_1096/v1741120262/code-nobackground_dlcxru.png" 
-                    alt="" 
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1536,h_1096/v1749489914/code-nobackground_j7rvef.png" 
+                    alt="Code screenshot for Genny Allison portfolio"
                     width="768"
                     height="548"
                     loading="lazy"
                     decoding="async"  
+                  />
                 </div>  
               </div> 
             </div>  
@@ -301,15 +302,30 @@
       <div class="black-border"></div>
       <footer id="nav">
         <div class="footer-logo">
-          <img       
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            alt="Photo of Genny Allison, the web developer and AI content specialist"
-            width="384"
-            height="240"
-            loading="lazy"
-            fetchpriority="low"
-            decoding="async" 
-          />
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img       
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              width="242"
+              height="105"
+              loading="lazy"
+              fetchpriority="low"
+              decoding="async" 
+              style-"object-fit: cover;"
+            />
+          </picture>
         </div>
         <div class="footer-links" id="footer-links">
           <ul>
@@ -317,8 +333,8 @@
             <li><a href="/pages/about.html" class="links">about me</a></li>
             <li><a href="/pages/skills.html" class="links">my skills</a></li>
             <li><a href="/pages/resume.html" class="links">my resume</a></li>
-            <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
-            <li><a href="/pages/contact.html" class="links">contact me</a></li>
+            <li><a href="/pages/collections.html" class="links">my work</a></li> 
+            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
           </ul>
         </div>
         <div class="social-media">
@@ -327,8 +343,12 @@
               <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/x-bird-icon.webp" 
                   alt="X (Twitter) logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
@@ -336,8 +356,12 @@
               <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/ig-icon.webp" 
                   alt="Instagram logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
@@ -345,16 +369,25 @@
               <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/linkedin-icon.webp" 
                   alt="LinkedIn logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
             <li>
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
-                <img src="/img/git-icon.webp" 
-                  alt="GitHub logo"width: 2.5rem;
-                  height: 2.5rem;
+                <img src="/img/github-icon.avif" 
+                  alt="GitHub logo"
+                  width="32"
+                  height="32"
+                  loading="auto"  
+                  style="object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
                 >
               </a>
             </li>
