fixed broken cloudinary url

--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.avif" 
       media="(min-width: 941px)"
-      type="image/png"
+      type="image/avif"
       fetchpriority="high"
     />
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.avif" 
       media="(min-width: 481px) and (max-width: 940px)" 
-      type="image/png"
+      type="image/avif"
     />
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.avif" 
       media="(max-width: 480px)" 
-      type="image/png"
+      type="image/avif"
     />
 
     <link
@@ -207,17 +207,17 @@
               <div class="headshot-container">
                 <picture class="headshot">
                   <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.png" 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.avif" 
                     media="(max-width: 480px)" 
-                    type="image/png"
+                    type="image/avif"
                   />
                   <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.png" 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.avif" 
                     media="(max-width: 940px)" 
-                    type="image/png"
+                    type="image/avif"
                   />
                   <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.png"
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.avif"
                     alt="Professional headshot of Genny Allison, AI Content Creator and SEO Specialist"
                     width="586" 
                     height="586"
@@ -227,17 +227,17 @@
                 </picture>
                 <picture class="headshot-animated">
                   <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_298,h_298/v1741120266/headshot-animation_euidhs.png" 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-animation_euidhs.avif" 
                     media="(max-width: 480px)" 
-                    type="image/png"
+                    type="image/avif"
                   />
                   <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_245,h_245/v1741120266/headshot-animation_euidhs.png" 
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-animation_euidhs.avif" 
                     media="(max-width: 940px)" 
-                    type="image/png"
+                    type="image/avif"
                   />
                   <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_586,h_586/v1741120266/headshot-animation_euidhs.png"
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-animation_euidhs.avif"
                     alt="Animated portrait of Genny Allison showcasing creative AI-driven web development and SEO expertise"
                     width="586" 
                     height="586"
@@ -255,7 +255,7 @@
                 </div>           
                 <div class="code-img">
                   <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1536,h_1096/v1749489914/code-nobackground_j7rvef.png" 
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1536,h_1096/v1749489914/code-nobackground_j7rvef.avif" 
                     alt="Code screenshot for Genny Allison portfolio"
                     width="768"
                     height="548"
