--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main id="index-pg">
       <section>
         <div class="desktop-version">
           <div class="main-title">
@@ -272,7 +272,6 @@
           <div class="main-title">
             <a href="/pages/resume.html" class="skills-text">
               <h1>i am genny allison</h1>
-              <p class="tagline">AI Content & SEO Specialist · Web Optimizer · Digital Creator</p>
             </a>
           </div>
           <div class="animation-container">
