--- a/index.html
+++ b/index.html
@@ -23,28 +23,35 @@
     <meta name="twitter:site" content="@allis78978" />
     <meta name="twitter:creator" content="@allis78978" />
 
-    <!-- Headshot Preloads -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.avif" 
-      media="(min-width: 941px)"
+    <!-- Headshot (Static) Preload -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.avif"
       type="image/avif"
+      media="(min-width: 941px)"
       fetchpriority="high"
     />
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.avif" 
-      media="(min-width: 481px) and (max-width: 940px)" 
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_692/v1741120266/headshot-nobackground_oet0ut.avif"
       type="image/avif"
+      media="(min-width: 769px) and (max-width: 940px)"
     />
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.avif" 
-      media="(max-width: 480px)" 
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.avif"
       type="image/avif"
+      media="(min-width: 481px) and (max-width: 768px)"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.avif"
+      type="image/avif"
+      media="(max-width: 480px)"
     />
 
     <link
@@ -206,43 +213,69 @@
               </div> 
               <div class="headshot-container">
                 <picture class="headshot">
-                  <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.avif" 
-                    media="(max-width: 480px)" 
+                  <!-- Desktop ≥ 941px -->
+                  <source
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.avif"
+                    media="(min-width: 941px)"
                     type="image/avif"
                   />
-                  <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.avif" 
-                    media="(max-width: 940px)" 
+
+                  <!-- Tablet 769px–940px -->
+                  <source
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_692/v1741120266/headshot-nobackground_oet0ut.avif"
+                    media="(min-width: 769px) and (max-width: 940px)"
                     type="image/avif"
                   />
-                  <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-nobackground_oet0ut.avif"
+
+                  <!-- Mobile 481px–768px -->
+                  <source
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_490,h_490/v1741120266/headshot-nobackground_oet0ut.avif"
+                    media="(min-width: 481px) and (max-width: 768px)"
+                    type="image/avif"
+                  />
+                  
+                  <!-- Fallback ≤480px -->
+                  <img
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_298,h_298/v1741120266/headshot-nobackground_oet0ut.avif"
                     alt="Professional headshot of Genny Allison, AI Content Creator and SEO Specialist"
-                    width="586" 
-                    height="586"
+                    width="149" 
+                    height="149"
                     loading="eager"
                     decoding="async"
+                    style="object-fit: cover; aspect-ratio: 149 / 149;"
                   />
                 </picture>
                 <picture class="headshot-animated">
-                  <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_298,h_298/v1741120266/headshot-animation_euidhs.avif" 
-                    media="(max-width: 480px)" 
+                  <!-- Desktop ≥ 941px -->
+                  <source
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1172,h_1172/v1741120266/headshot-animation_euidhs.avif"
+                    media="(min-width: 941px)"
                     type="image/avif"
                   />
-                  <source 
-                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_490,h_490/v1741120266/headshot-animation_euidhs.avif" 
-                    media="(max-width: 940px)" 
+
+                  <!-- Tablet 769px–940px -->
+                  <source
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_692/v1741120266/headshot-animation_euidhs.avif"
+                    media="(min-width: 769px) and (max-width: 940px)"
                     type="image/avif"
                   />
-                  <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1172,h_1172/v1741120266/headshot-animation_euidhs.avif"
+
+                  <!-- Mobile 481px–768px -->
+                  <source
+                    srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_490,h_490/v1741120266/headshot-animation_euidhs.avif"
+                    media="(min-width: 481px) and (max-width: 768px)"
+                    type="image/avif"
+                  />
+                  
+                  <!-- Fallback ≤480px -->
+                  <img
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_298,h_298/v1741120266/headshot-animation_euidhs.avif"
                     alt="Animated portrait of Genny Allison showcasing creative AI-driven web development and SEO expertise"
-                    width="586" 
-                    height="586"
+                    width="149" 
+                    height="149"
                     loading="eager"
                     decoding="async"
+                    style="object-fit: cover; aspect-ratio: 149 / 149;"
                   />
                 </picture>
               </div>    
