updated inline width and height of images

--- a/pages/about.html
+++ b/pages/about.html
@@ -273,22 +273,22 @@
     <div class="outer-container">
       <picture> 
         <source
-          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1292,h_336/v1749308658/allison-stock-aboutme_rwwkww.avif"
+          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_2584,h_672/v1749308658/allison-stock-aboutme_rwwkww.avif"
           type="image/avif"
           media="(min-width: 1200px)"
           sizes="100vw"
         />
         <source
-          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_667,h_173/v1749308658/allison-stock-aboutme_rwwkww.avif"
+          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_1520,h_394/v1749308658/allison-stock-aboutme_rwwkww.avif"
           type="image/avif"
           media="(min-width: 481px) and (max-width: 1199px)"
           sizes="100vw"
         />
         
         <img 
-          src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,dpr_auto,fl_lossy,fl_force_strip/v1749309125/allison-stock-aboutme-mobile_a6btoe.avif" 
-          width="100%" 
-          height="auto" 
+          src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_944,h_244/v1749309125/allison-stock-aboutme-mobile_a6btoe.avif" 
+          width="472" 
+          height="122" 
           alt="Photo of Genny Allison, the web developer and AI content specialist"
           style="object-fit: contain;"
           loading="auto" 
@@ -321,22 +321,42 @@
                   </div>
                   <div class="inside-grid-favorites">
                     <div class="favorites">
-                      <img src="/img/game-icon.png">
+                      <img src="/img/game-icon.png"
+                        alt="Game controller icon representing Genny Allison's love for gaming"
+                        width="114"
+                        height="114"
+                        decoding="async"
+                      />
                       <p>games</p>
                     </div>
                     <div class="favorites">
-                      <img src="/img/baseball-icon.png">
+                      <img src="/img/baseball-icon.png"
+                        alt="Baseball icon representing Genny Allison’s interest in sports like baseball and hockey"
+                        width="114"
+                        height="114"
+                        decoding="async"
+                      />
                       <p>baseball & hockey</p>
                     </div>
                     <div class="favorites books">
-                      <img src="/img/book-icon.png">
+                      <img src="/img/book-icon.png"
+                        alt="Book icon representing Genny Allison's favorite reading hobbies"
+                        width="114"
+                        height="114"
+                        decoding="async"
+                      />
                       <p>books</p>
                     </div>
                   </div>
                 </div>
                 <div class="quote">
                   <div class="quote-img">
-                    <img src="/img/quotes-icon.png">
+                    <img src="/img/quotes-icon.png"
+                      alt="Quote icon emphasizing inspirational message from Genesis 9:16"
+                      width="40"
+                      height="40"
+                      decoding="async"
+                    />
                   </div>
                   <p>god promises a rainbow after the storm.</p>
                   <p> - genesis 9:16</p>
