--- a/pages/skills.html
+++ b/pages/skills.html
@@ -12,7 +12,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749311652/girl-learning_uylv0k.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_916/v1749311652/girl-learning_uylv0k.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -22,7 +22,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1749311652/girl-learning_uylv0k.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_438/v1749311652/girl-learning_uylv0k.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -32,7 +32,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1749311652/girl-learning_uylv0k.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_320/v1749311652/girl-learning_uylv0k.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -42,7 +42,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1749311652/girl-learning_uylv0k.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_204/v1749311652/girl-learning_uylv0k.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -264,12 +264,14 @@
       <div class="nav-logo">
         <a href="/index.html">
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_120/v1746551086/allisonstock-white-nav-logo_tklcra.png"
             alt="Logo for Allison Stock Inc"
             loading="eager"
+            width="136"
+            height="60"
             fetchpriority="high"
             decoding="async"
-            style="object-fit: contain; aspect-ratio: 168 / 69.078"
+            style="object-fit: contain;"
           />
         </a>
       </div>
@@ -353,7 +355,7 @@
         </div>
       </div>
     </header>
-    <main class="skills-main">
+    <main class="skills-main" id="skills-pages">
         <!--skills-->
       <div class="skills-container">
         <div class="skills-grid skills-black-container">
