updated resume min-height

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -314,7 +314,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me" id="projects">
+    <main class="about-me" id="resume">
       <div class="projects-content">
         <div class="resume-date fancy-border project-title" id="description">
           <h2>Owner | Operator | Allison Stock Inc.</h2>
